RESOLVED FIXED140794
REGRESSION (174847): can't view NHK(Japan's national public broadcasting organization)’s news pages
https://bugs.webkit.org/show_bug.cgi?id=140794
Summary REGRESSION (174847): can't view NHK(Japan's national public broadcasting orga...
Michael Saboff
Reported 2015-01-22 15:51:02 PST
Open http://www3.nhk.or.jp/news/ click on a line for any article. It always gives a black image.
Attachments
Patch (3.56 KB, patch)
2015-01-22 16:02 PST, Michael Saboff
no flags
Patch with fixed LayoutTests/ChangeLog (3.57 KB, patch)
2015-01-22 16:04 PST, Michael Saboff
andersca: review+
Michael Saboff
Comment 1 2015-01-22 15:56:06 PST
Michael Saboff
Comment 2 2015-01-22 16:02:09 PST
WebKit Commit Bot
Comment 3 2015-01-22 16:03:19 PST
Attachment 245177 [details] did not pass style-queue: ERROR: LayoutTests/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Michael Saboff
Comment 4 2015-01-22 16:04:47 PST
Created attachment 245178 [details] Patch with fixed LayoutTests/ChangeLog
Michael Saboff
Comment 5 2015-01-22 16:15:45 PST
Note You need to log in before you can comment on or make changes to this bug.