REGRESSION (174847): can't view NHK(Japan's national public broadcasting organization)’s news pages https://bugs.webkit.org/show_bug.cgi?id=140794

Reviewed by Anders Carlsson.

Source/WebCore:

If a document.open has been set, return it instead of always returning a new,
non-cached instance of jsHTMLDocumentPrototypeFunctionOpen.

Test: js/dom/document-overwrite-open.html

* bindings/js/JSHTMLDocumentCustom.cpp:
(WebCore::JSHTMLDocument::getOwnPropertySlot):

LayoutTests:

* js/dom/document-overwrite-open-expected.txt: Added.
* js/dom/document-overwrite-open.html: Added.


Canonical link: https://commits.webkit.org/158785@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178966 268f45cc-cd09-0410-ab3c-d52691b4dbfc